--- a/src/layouts/partials/header.html
+++ b/src/layouts/partials/header.html
@@ -1,13 +1,16 @@
 <header>
-  <nav class="navTop primary mat-elevation-z6">
-    <a class="matButton" href="">wcnexus</a>
-    <a class="matButton" href="/">index</a>
-    <a class="matButton" href="">venture</a>
+  <nav class="navTop green">
+    <a class="matButton brand-logo" href="">wcnexus</a>
+    <div class="hide-on-med-and-down">
+      <a class="matButton" href="/">index</a>
+      <a class="matButton" href="">venture</a>
+    </div>
     <div class="flexSpacer"></div>
-    <a class="matButton holder" href="https://github.com/valorad/wcnexus.com" target="_blank">
-      <img class="fluid logo" src="{{ "images/GitHub-Mark-Light-120px-plus.png" | absURL }}" alt="github">
-      <span>Github</span>
-    </a>
-
+    <div class="hide-on-med-and-down">
+      <a class="matButton holder" href="https://github.com/valorad/wcnexus.com" target="_blank">
+        <img class="fluid logo" src="{{ "images/GitHub-Mark-Light-120px-plus.png" | absURL }}" alt="github">
+        <span>Github</span>
+      </a>
+    </div>
   </nav>
 </header>
