--- a/src/layouts/404.html
+++ b/src/layouts/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{ with .Site.LanguageCode }}{{ . }}{{ else }}en-us{{ end }}">
 {{ partial "head.html" . }}
-<body>
+<body class="mat-green-yellow">
   404 works
 {{ partial "body-script.html" . }}
 </body>
