--- a/src/layouts/_default/list.html
+++ b/src/layouts/_default/list.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{ with .Site.LanguageCode }}{{ . }}{{ else }}en-us{{ end }}">
 {{ partial "head.html" . }}
-<body class="mat-green">
+<body class="mat-green-yellow">
   {{ partial "header.html" . }}
     
   {{ partial "footer.html" . }}
