--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -6,7 +6,7 @@
 
 <html lang="{{ with .Site.LanguageCode }}{{ . }}{{ else }}en-us{{ end }}">
 {{ partial "head.html" . }}
-<body>
+<body class="mat-green-yellow">
 
   {{ partial "header.html" . }}
   <section>
