--- a/src/layouts/partials/header.html
+++ b/src/layouts/partials/header.html
@@ -1,13 +1,13 @@
 <header>
-  <nav class="navTop green">
-    <a class="matButton brand-logo" href="">wcnexus</a>
+  <nav class="navTop primary">
+    <a class="waves-effect waves-teal btn-flat brand-logo">wcnexus</a>
     <div class="hide-on-med-and-down">
-      <a class="matButton" href="/">index</a>
-      <a class="matButton" href="">venture</a>
+      <a class="waves-effect waves-teal btn-flat" href="/">Index</a>
+      <a class="waves-effect waves-teal btn-flat" href="##">Venture</a>
     </div>
     <div class="flexSpacer"></div>
     <div class="hide-on-med-and-down">
-      <a class="matButton holder" href="https://github.com/valorad/wcnexus.com" target="_blank">
+      <a class="waves-effect waves-teal btn-flat holder" href="https://github.com/valorad/wcnexus.com" target="_blank">
         <img class="fluid logo" src="{{ "images/GitHub-Mark-Light-120px-plus.png" | absURL }}" alt="github">
         <span>Github</span>
       </a>
