--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -27,12 +27,27 @@ body {
   flex-grow: 1;
 }
 
-.mat-elevation-z6 {
-  box-shadow: 0 3px 5px -1px rgba(0,0,0,.2), 0 6px 10px 0 rgba(0,0,0,.14), 0 1px 18px 0 rgba(0,0,0,.12);
+ul {
+  list-style-type: none;
+  padding: 0px;
+  margin: 0px;
 }
+
+// .mat-elevation-z6 {
+//   box-shadow: 0 3px 5px -1px rgba(0,0,0,.2), 0 6px 10px 0 rgba(0,0,0,.14), 0 1px 18px 0 rgba(0,0,0,.12);
+// }
 
 .fluid {
   max-width: 100%;
+}
+
+.round {
+  border-radius: 50%;
+}
+
+.parallax {
+  min-height: 50vh;
+  background: transparent;
 }
 
 /* Header */
@@ -60,9 +75,58 @@ nav.navTop {
   }
 }
 
+/* Index */
+section.cover {
+  position: relative;
+  overflow: hidden;
+  height: 400px;
+  div.imgHolder {
+    // height: 300px;
+    img {
+      filter: blur(0.2em);
+    }
+  }
+}
 
+div.venturer {
+  text-align: center;
+  position: absolute;
+  width: 100%;
+  top: 1em;
+  transform: translateX(50%);
+  right: 50%;
+  p {
+    font-size: 1.5em;
+    color: white;
+  }
+}
+
+div.social {
+  li { 
+    display: inline-block;
+    margin: 1em;
+    width: 32px;
+    height: 32px;
+    cursor: pointer;
+    img {
+      width: 32px;
+    }
+  }
+  li:hover {
+    box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.2);
+    background-color: rgba(128, 128, 128, 0.8);
+  }
+}
+
+div.avatar {
+  img {
+    border: solid 1px white;
+    width: 64px;
+  }
+}
 
 @media only screen and (min-width: 992px) {
+  /* Header */
   nav.navTop {
     a.brand-logo {
       position: static;
