--- a/src/layouts/partials/header.html
+++ b/src/layouts/partials/header.html
@@ -1,6 +1,6 @@
 <header>
-  <nav class="navTop primary">
-    <a class="waves-effect waves-teal btn-flat brand-logo">wcnexus</a>
+  <nav class="navTop">
+    <a class="waves-effect waves-teal btn-flat brand-logo">w</a>
     <div class="hide-on-med-and-down">
       <a class="waves-effect waves-teal btn-flat" href="/">Index</a>
       <a class="waves-effect waves-teal btn-flat" href="##">Venture</a>
