--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -43,6 +43,30 @@ pre {
   padding: 1em;
 }
 
+// code {
+//   @extend span.badge;
+//   @extend span.badge.new;
+// }
+h1 {
+  font-size: 3rem;
+}
+
+h2 {
+  font-size: 2rem;
+}
+
+h3 {
+  font-size: 1.5rem;
+}
+
+h4 {
+  font-size: 1.25rem;
+}
+
+h5 {
+  font-size: 1.125rem;
+}
+
 .flexSpacer {
   flex-grow: 1;
 }
