--- a/src/layouts/partials/footer.html
+++ b/src/layouts/partials/footer.html
@@ -1,3 +1,9 @@
-<footer>
-  footer
+<footer class="app page-footer primary">
+  <div class="footer-copyright">
+    <div class="container">
+      <span>© 2017 Valorad the Oneiroseeker</span>
+      <span>MIT</span>
+      <a class="right" href="#!">WB, ZH, TW, GH</a>
+    </div>
+  </div>
 </footer>
