--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -8,12 +8,13 @@
 {{ partial "head.html" . }}
 <body class="mat-green-yellow">
 
+  <!-- header -->
   {{ partial "header.html" . }}
   <section class="cover index parallax-window">
     <!-- cover pic -->
     <div class="parallax" data-parallax data-src="{{ "images/landscape.jpg" | absURL }}"></div>
     <div class="venturer">
-      <div class="avatar">
+      <div class="avatar index">
         <p class="avatar">
           <img src="{{ "images/fallout-VaultBoy-2.jpg" | absURL }}" alt="avatar" class="fluid round">
         </p>
@@ -57,6 +58,8 @@
         </div>
       </section>
     </div>
+    <!-- footer -->
+    {{ partial "footer.html" . }}
 
   </main>
 
