--- a/src/layouts/partials/head.html
+++ b/src/layouts/partials/head.html
@@ -5,4 +5,5 @@
   <title>{{ .Title }}</title>
   {{ .Hugo.Generator }}
   <link rel="stylesheet" href="{{ "css/main.css" | absURL }}">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
