+ add footer icons

--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -14,8 +14,8 @@
     <!-- cover pic -->
     <div class="parallax" data-parallax data-src="{{ "images/landscape.jpg" | absURL }}"></div>
     <div class="venturer">
-      <div class="avatar index">
-        <p class="avatar">
+      <div class="avatar">
+        <p>
           <img src="{{ "images/fallout-VaultBoy-2.jpg" | absURL }}" alt="avatar" class="fluid round">
         </p>
         <p>Valorad</p>
@@ -38,7 +38,7 @@
       <section>
         <div class="row">
           {{ range $section }}
-          <div class="col m12 l5">
+          <div class="col m12 l6">
             <article class="card">
               <div class="card-image">
                 <a href="{{ .Permalink }}">
