--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -135,6 +135,21 @@ footer.app {
   a {
     color: white;
   }
+  div.container {
+    position: relative;
+    p {
+      margin: 0px auto;
+      text-align: center;
+    }
+  }
+  div.social {
+    text-align: center;
+    i {
+      font-size: 24px;
+      margin: 0.5em;
+    }
+  }
+
 }
 
 /* Index */
@@ -143,43 +158,40 @@ section.cover.index {
   .parallax {
     min-height: 60vh;
   }
-}
-
-div.venturer {
-  text-align: center;
-  position: absolute;
-  width: 100%;
-  top: 1em;
-  transform: translateX(50%);
-  right: 50%;
-  margin-top: 10vh;
-  p {
-    font-size: 1.5em;
-    color: white;
-  }
-}
-
-div.social {
-  li { 
-    display: inline-block;
-    margin: 1em;
-    width: 32px;
-    height: 32px;
-    cursor: pointer;
-    img {
-      width: 32px;
+  div.venturer {
+    text-align: center;
+    position: absolute;
+    width: 100%;
+    top: 1em;
+    transform: translateX(50%);
+    right: 50%;
+    margin-top: 10vh;
+    p {
+      font-size: 1.5em;
+      color: white;
     }
   }
-  li:hover {
-    box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.2);
-    background-color: rgba(128, 128, 128, 0.8);
+  div.social {
+    li { 
+      display: inline-block;
+      margin: 1em;
+      width: 32px;
+      height: 32px;
+      cursor: pointer;
+      img {
+        width: 32px;
+      }
+    }
+    li:hover {
+      box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.2);
+      background-color: rgba(128, 128, 128, 0.8);
+    }
   }
-}
-
-div.index.avatar {
-  img {
-    border: solid 1px white;
-    width: 128px;
+  div.avatar {
+    img {
+      border: solid 1px white;
+      width: 128px;
+    }
   }
 }
 
@@ -237,6 +249,20 @@ main.single {
   nav.navTop {
     a.brand-logo {
       position: static;
+    }
+  }
+
+  /* Footer */
+  footer.app {
+    div.container {
+      p {
+        text-align: left;
+      }
+    }
+    div.social {
+      position: absolute;
+      right: 1em;
+      top: -0.5em;
     }
   }
 
