--- a/src/layouts/partials/head.html
+++ b/src/layouts/partials/head.html
@@ -5,5 +5,6 @@
   <title>{{ .Title }}</title>
   {{ .Hugo.Generator }}
   <link rel="stylesheet" href="{{ "css/main.css" | absURL }}">
+  <link rel="stylesheet" href="{{ "css/iconfont.css" | absURL }}">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
