--- a/src/layouts/partials/header.html
+++ b/src/layouts/partials/header.html
@@ -1,14 +1,15 @@
 <header>
   <nav class="navTop">
-    <a class="waves-effect waves-teal btn-flat brand-logo">w</a>
+    
+    <a class="waves-effect waves-primary btn-flat brand-logo"><i class="icomoon icon-wcnexus"></i></a>
     <div class="hide-on-med-and-down">
-      <a class="waves-effect waves-teal btn-flat" href="/">Index</a>
-      <a class="waves-effect waves-teal btn-flat" href="##">Venture</a>
+      <a class="waves-effect waves-primary btn-flat" href="/">Index</a>
+      <a class="waves-effect waves-primary btn-flat" href="##">Venture</a>
     </div>
     <div class="flexSpacer"></div>
     <div class="hide-on-med-and-down">
-      <a class="waves-effect waves-teal btn-flat holder" href="https://github.com/valorad/wcnexus.com" target="_blank">
-        <img class="fluid logo" src="{{ "images/GitHub-Mark-Light-120px-plus.png" | absURL }}" alt="github">
+      <a class="waves-effect waves-primary btn-flat holder" href="https://github.com/valorad/wcnexus.com" target="_blank">
+        <i class="iconfont icon-github"></i>
         <span>Github</span>
       </a>
     </div>
