--- a/src/layouts/partials/head.html
+++ b/src/layouts/partials/head.html
@@ -6,5 +6,6 @@
   {{ .Hugo.Generator }}
   <link rel="stylesheet" href="{{ "css/main.css" | absURL }}">
   <link rel="stylesheet" href="{{ "css/iconfont.css" | absURL }}">
+  <link rel="stylesheet" href="{{ "css/icomoon.css" | absURL }}">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
