+ site params and init e.g. site

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -185,6 +185,12 @@ section.cover.index {
       font-size: 1.5em;
       color: white;
     }
+    div.avatarPlaceholder {
+      height: 128px;
+      width: 128px;
+      background-color: #eeeeee;
+      margin: 0px auto;
+    }
   }
   div.social {
     li { 
