--- a/src/layouts/partials/footer.html
+++ b/src/layouts/partials/footer.html
@@ -1,7 +1,6 @@
 {{ $user := $.Site.Params.user }}
 {{ $social := $.Site.Params.social }}
 
-
 <footer class="app page-footer primary">
   <div class="footer-copyright">
     <div class="container">
@@ -10,10 +9,10 @@
         <span><a href="https://github.com/valorad/wcnexus-venture/blob/master/LICENSE" title="MIT License"><i class="iconfont icon-libra"></i></a></span>
       </p>
       <div class="social">
-        {{ with $social.weibo }}<a href="{{ $social.weibo }}"><i class="iconfont icon-weibo"></i></a>{{ end }}
-        {{ with $social.zhihu }}<a href="{{ $social.zhihu }}"><i class="iconfont icon-zhihu"></i></a>{{ end }}
-        {{ with $social.twitter }}<a href="{{ $social.twitter }}"><i class="iconfont icon-twitter"></i></a>{{ end }}
-        {{ with $social.github }}<a href="{{ $social.github }}"><i class="iconfont icon-github"></i></a>{{ end }}
+        {{ with $social.weibo }}<a href="{{ . }}"><i class="iconfont icon-weibo"></i></a>{{ end }}
+        {{ with $social.zhihu }}<a href="{{ . }}"><i class="iconfont icon-zhihu"></i></a>{{ end }}
+        {{ with $social.twitter }}<a href="{{ . }}"><i class="iconfont icon-twitter"></i></a>{{ end }}
+        {{ with $social.github }}<a href="{{ . }}"><i class="iconfont icon-github"></i></a>{{ end }}
       </div>
     </div>
   </div>
