--- a/src/layouts/partials/header.html
+++ b/src/layouts/partials/header.html
@@ -3,8 +3,8 @@
     
     <a class="waves-effect waves-primary btn-flat brand-logo"><i class="icomoon icon-wcnexus"></i></a>
     <div class="hide-on-med-and-down">
-      <a class="waves-effect waves-primary btn-flat" href="/">Index</a>
-      <a class="waves-effect waves-primary btn-flat" href="##">Venture</a>
+      <a class="waves-effect waves-primary btn-flat" href="http://www.wcnexus.com/#index">Index</a>
+      <a class="waves-effect waves-primary btn-flat" href="/">Venture</a>
     </div>
     <div class="flexSpacer"></div>
     <div class="hide-on-med-and-down">
