--- a/src/layouts/_default/single.html
+++ b/src/layouts/_default/single.html
@@ -34,6 +34,12 @@
               </div>
             </div>
             {{ .Content }}
+            <hr>
+            <div class="tags">
+              {{ range .Params.tags }}
+              <span>{{ . }}</span>
+              {{ end }}
+            </div>
           </div>
         </article>
       </div>
